# ai-career-services

./: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  .lintstagedrc.js  .prettierignore  .prettierrc  Dockerfile.client  Dockerfile.node  Dockerfile.python  README.md  commitlint.config.js  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/admin-service/: package.json  vitest.config.ts
apps/admin-service/src/: app.ts  server.ts
apps/ai-service/: pyproject.toml  requirements.txt
apps/ai-service/app/: __init__.py  main.py
apps/ai-service/app/api/v1/: router.py
apps/ai-service/app/core/: config.py  errors.py  logging.py
apps/ai-service/tests/: __init__.py  test_health.py
apps/analytics-service/: pyproject.toml  requirements.txt
apps/analytics-service/app/: main.py
apps/analytics-service/tests/: test_health.py
apps/auth-service/: README.md  package.json
apps/auth-service/src/: app.ts  seed-dummy.ts  server.ts
apps/billing-service/: package.json
apps/billing-service/src/: app.ts  server.ts
apps/career-service/: package.json
apps/career-service/src/: app.ts  server.ts
apps/exam-service/: package.json
apps/exam-service/src/: app.ts  server.ts
apps/gateway/: package.json  vitest.config.ts
apps/gateway/src/: app.ts  server.ts
apps/notification-service/: package.json
apps/organization-service/: package.json  tsconfig.json
apps/user-service/: README.md  package.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md
scripts/: scaffold-services.mjs
(+96 files in other folders)
